javascript class 2 and 3

--- a/javaScript/1. class/index.html
+++ b/javaScript/1. class/index.html
@@ -33,12 +33,12 @@
         // // var newage = age + 20
         // console.log(newclass)
 
-        var firstName3 = 'Muhammad'
-        var lastName = "zubair"
-        var fullNmae = firstName + "      " + lastName
-        console.log(fullNmae)
+        // var firstName3 = 'Muhammad'
+        // var lastName = "zubair"
+        // var fullNmae = firstName + "      " + lastName
+        // console.log(fullNmae)
 
-        var ThisVairalIsForAge
+        // var ThisVairalIsForAge
     </script>
 
 
