--- a/javaScript/3. class/index.html
+++ b/javaScript/3. class/index.html
@@ -39,13 +39,15 @@
         //     alert("u r right too" + " " +congrats)
         // }
 
-        if ( 6 > 9){
-            console.log("u r right pahli")
-        }else if (6 != 6){
-            console.log("u r right ")
-        }else{
-            console.log("ankhain khool k likho ")
-        }
+            
+
+        // if ( 6 > 9){
+        //     console.log("u r right pahli")
+        // }else if (6 == 6){
+        //     console.log("u r right ")
+        // }else{
+        //     console.log("ankhain khool k likho ")
+        // }
     </script>
 </body>
 
